[package]
name = "getapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
scraper = "0.12.0"
regex = "1.5.4"
tokio = { version = "1", features = ["full"] }
clap = "3.0.0-beta.5"
futures = "0.3"
async-recursion = "1.0.4"
